plugins {
    id 'application'
}

repositories {
    mavenCentral()
}

application {
    mainClass = 'decomposition.cli.Main'
}

dependencies {
    implementation 'dev.roanh.gmark:gmark:2.1'
    implementation 'com.google.guava:guava:32.1.2-jre'
    implementation 'com.google.code.gson:gson:2.10.1'

    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.0'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.test {
    useJUnitPlatform()
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)  
    }
}

tasks.register('runPlot', JavaExec) {
    group = 'application'
    description = 'Launches the CPQ plotting utility'
    mainClass = 'decomposition.PlotCPQ'
    classpath = sourceSets.main.runtimeClasspath
    standardInput = System.in
    javaLauncher = javaToolchains.launcherFor {
        languageVersion = JavaLanguageVersion.of(21)
    }
}
